# bhwi

./: .gitignore  AGENTS.md  BITBOX_LICENSE  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.agents/: README.md
.agents/checklists/: device-command.md  new-device.md
.agents/context/: crate-map.md
.agents/review/: cli-review.md  device-protocol-review.md
.agents/runbooks/: emulator-validation.md  hwi-parity.md
.agents/templates/: handoff.md  pr-description.md
.github/workflows/: emulators.yml  main.yml  website.yml
bhwi/: Cargo.toml
bhwi-async/: Cargo.toml
bhwi-async/src/: bitbox.rs  coldcard.rs  jade.rs  ledger.rs  lib.rs
bhwi-async/src/transport/: coldcard_hid.rs  ledger_hid.rs  mod.rs
bhwi-async/src/transport/bitbox/: hid.rs
bhwi-async/src/transport/coldcard/: hid.rs  mod.rs
bhwi-async/src/transport/jade/: mod.rs  tcp.rs
bhwi-async/src/transport/ledger/: hid.rs  mod.rs  speculos.rs
bhwi-cli/: Cargo.toml
bhwi-cli/src/: address.rs  bitbox.rs  coldcard.rs  config.rs  get_descriptors.rs  hid.rs  hwi.rs  jade.rs  ledger.rs  lib.rs  management.rs  udev.rs
bhwi-wasm/: Cargo.toml
bhwi-wasm/.cargo/: config.toml
bhwi-wasm/src/: ledger.rs  lib.rs  pinserver.rs  webhid.rs  webserial.rs
bhwi/src/: common.rs  device.rs  lib.rs  policy.rs
bhwi/src/bitbox/: antiklepto.rs  api.rs  error.rs  interpreter.rs  keypath.rs  mod.rs  noise.rs  policy.rs  proto.rs  sign.rs  u2f.rs
bhwi/src/coldcard/: api.rs  encrypt.rs  mod.rs
bhwi/src/jade/: api.rs  mod.rs
bhwi/src/ledger/: apdu.rs  command.rs  error.rs  interpreter.rs  merkle.rs  mod.rs  psbt.rs  store.rs  wallet.rs
bhwi/src/trezor/: api.rs  error.rs  interpreter.rs  mod.rs  proto.rs
docs/: BITBOX.md  COLDCARD.md  DEVICE_ONBOARDING.md  HWI.md  HWI_PARITY.md  JADE.md  LEDGER.md  NIX-EMULATORS-PLAN.md  NIX.md  VISION.md
e2e/bitbox/: Cargo.toml  README.md
e2e/bitbox/src/: lib.rs
e2e/cli/: Cargo.toml
e2e/cli/src/: bitbox.rs  coldcard.rs  jade.rs  ledger.rs  lib.rs  support.rs
e2e/coldcard/: Cargo.toml
e2e/coldcard/src/: lib.rs
e2e/hwi-parity/: Cargo.toml
e2e/hwi-parity/src/: lib.rs
e2e/jade/: Cargo.toml
e2e/jade/src/: lib.rs
e2e/ledger/: Cargo.toml  README.md
e2e/ledger/automations/: display_address.json  hwi_speculos.json  register_wallet_accept.json  sign_message_reject.json  sign_psbt.json
e2e/ledger/src/: lib.rs  multisig.rs
nix/: speculos.nix
nix/scripts/: build-bitbox-sim.sh  build-ledger-app.sh  emit-gh-error-log.sh  init-jade.sh  run-hwi-upstream-suite.sh  start-bitbox.sh  start-coldcard.sh  start-jade-pinserver.sh  start-jade.sh  start-ledger.sh  stop-emulator.sh  wait-for-port.sh  wait-for-socket.sh
src/: common.rs  lib.rs
src/jade/: mod.rs
src/ledger/: mod.rs
website/: LICENSE  README.md  flake.nix  index.html  justfile  package-lock.json  package.json  shell.nix  vite.config.ts
website/src/: App.tsx
