[package]
name = "bhwi-async"
version = "0.0.1"
edition = "2021"
authors = ["Edouard Paris <m@edouard.paris>"]
repository = "https://github.com/wizardsardine/bhwi"
license-file = "LICENCE"
keywords = ["bitcoin",  "miniscript"]
description = "development kit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bhwi = { path = "../bhwi", version = "0.0.1"}
futures = "0.3"
byteorder = "1.5"
async-trait = "0.1"
