[package]
name = "bhwi-async"
version = "0.0.1"
edition = "2024"
authors = ["Edouard Paris <m@edouard.paris>"]
repository = "https://github.com/wizardsardine/bhwi"
license-file = "../LICENSE"
keywords = ["bitcoin",  "miniscript"]
description = "development kit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
bhwi.workspace = true
futures.workspace = true
log.workspace = true

byteorder = "1.5"
