[package]
name = "bhwi-cli"
version = "0.0.1"
edition = "2024"
authors = ["Edouard Paris <m@edouard.paris>"]
repository = "https://github.com/wizardsardine/bhwi"
license-file = "../LICENSE"
keywords = ["bitcoin",  "miniscript"]
description = "cli tool to talk to hardware wallet"

[[bin]]
name = "bhwi"
path = "src/bin/bhwi.rs"

[dependencies]
bitcoin.workspace = true
bhwi-async.workspace = true

clap = { version = "4.4.7", features = ["derive"] }
hex = "0.4"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"] }
