[package]
name = "bhwi-cli"
version = "0.0.1"
edition = "2024"
authors = ["Edouard Paris <m@edouard.paris>"]
repository = "https://github.com/wizardsardine/bhwi"
license-file = "../LICENSE"
keywords = ["bitcoin",  "miniscript"]
description = "cli tool to talk to hardware wallet"

[[bin]]
name = "bhwi"
path = "src/bin/bhwi.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitcoin = { workspace = true, features = ["serde"] }
bhwi-async = { workspace = true, features = ["emulators"] }
futures.workspace = true
hex = { workspace = true, features = ["serde"] }
miniscript = { workspace = true, features = ["serde"] }
rand_core.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"] }

async-hid = "0.5.0"
clap = { version = "4.4.7", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
tokio-serial = "5.4.5"
