[package]
name = "bhwi-wasm"
version = "0.0.1"
edition = "2024"
authors.workspace = true
repository = "https://github.com/wizardsardine/bhwi"
license-file.workspace = true
keywords = ["bitcoin",  "miniscript"]
description = "development kit"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
bitcoin = { workspace = true, features = ["secp-lowmemory"] }
bhwi = { workspace = true, features = ["bitbox"] }
hex.workspace = true
bhwi-async = { workspace = true, features = ["bitbox"] }
futures.workspace = true
log.workspace = true
rand_core.workspace = true
thiserror.workspace = true

console_log = "0.2"
console_error_panic_hook = "0.1.7"
js-sys = "=0.3.91"
getrandom = { version = "=0.2.16", features = ["js"] }
wasm-bindgen = { version = "=0.2.114" }
wasm-bindgen-futures = { version = "=0.4.64" }
web-sys = { version = "=0.3.91", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Hid",
    "HidDevice",
    "HidConnectionEvent",
    "HidInputReportEvent",
    "HidDeviceRequestOptions",
    "Navigator",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Serial",
    "SerialOptions",
    "SerialPort",
    "SerialPortRequestOptions",
    "Window",
    "WritableStream",
    "WritableStreamDefaultWriter"
] }
