[package]
name = "bhwi"
version = "0.0.1"
edition = "2024"
authors = ["Edouard Paris <m@edouard.paris>"]
repository = "https://github.com/wizardsardine/bhwi"
license-file = "../LICENSE"
keywords = ["bitcoin",  "miniscript"]
description = "development kit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jade"]
jade = ["serde", "serde_bytes", "serde_cbor"]

[dependencies]
bitcoin.workspace = true
log.workspace = true # TODO: remove me
serde_json.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

serde_bytes = { version = "0.11.14", optional = true }
serde_cbor = { version = "0.11", optional = true }

# coldcard encryption
aes = "0.8.3"
ctr = "0.9.2"
k256 = { version = "0.13.3", features = ["arithmetic"] }
base64ct = "=1.7.3"
