[package]
name = "bhwi-e2e-cli"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
bhwi-async.workspace = true
bhwi-cli = { path = "../../bhwi-cli" }
bitcoin = { workspace = true, features = ["base64"] }
hex.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
