[package]
name = "bhwi-e2e-coldcard"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitcoin.workspace = true
base64ct = { workspace = true, features = ["alloc"] }
bhwi-async.workspace = true
rand_core.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }

bhwi-cli = { path = "../../bhwi-cli" }
